# research-mate

./: .gitignore  README.md  app.py  pyproject.toml
scripts/: pdf_parser.py
