[project]
name = "research-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nightshade14", email = "satyamchatrola14@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
